--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "babel-cli": "^6.4.0",
+    "body-parser": "^1.16.0",
+    "ejs": "^2.5.5",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   },
